objects/Account.object
<CustomObject>
    <fields>
        <fullName>A2Z_CoID__c</fullName>
        <externalId>true</externalId>
        <label>A2Z CoID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>A2Z_Company_Name__c</fullName>
        <label>A2Z Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A2Z_Password__c</fullName>
        <label>A2Z Password</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_18_digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account 18 digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Names__c</fullName>
        <label>Alternate Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approved_For_A2Z__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewed by Billing Coordinator?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingProvince__c</fullName>
        <inlineHelpText>Use this field if State/Province is not available for this particular country.</inlineHelpText>
        <label>HQ Province/Region 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_RecordKey__c</fullName>
        <externalId>true</externalId>
        <label>CDH_RecordKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Collection_Alert_Reason__c</fullName>
        <label>Collection Alert Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Payment</fullName>
                </value>
                <value>
                    <fullName>Return check</fullName>
                </value>
                <value>
                    <fullName>Credit card chargeback</fullName>
                </value>
                <value>
                    <fullName>Cancellation revenue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collections_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collections Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_ID__c</fullName>
        <label>Company ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA2__c</fullName>
        <label>Exhibit As / Directory Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA__c</fullName>
        <label>Doing Business As</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_ID__c</fullName>
        <description>Data Migration ID</description>
        <externalId>true</externalId>
        <label>DM_ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Sell__c</fullName>
        <label>Do Not Sell</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blacklisted</fullName>
                </value>
                <value>
                    <fullName>Collections Alert</fullName>
                </value>
                <value>
                    <fullName>Elastics Suite Competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Main__c</fullName>
        <label>A2Z Company E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_Account_ID_Auto__c</fullName>
        <externalId>true</externalId>
        <label>External Account ID Auto</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>External_Account_ID_Text__c</fullName>
        <description>A2Z's Company ID</description>
        <inlineHelpText>A2Z CoID</inlineHelpText>
        <label>A2Z Company ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Account_ID__c</fullName>
        <formula>IF(External_Account_Number__c = 0 , " ", Text(External_Account_Number__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Account ID_NotUsed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Account_Number__c</fullName>
        <label>External Account #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Number__c</fullName>
        <defaultValue>810000</defaultValue>
        <label>External Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fax_Permission__c</fullName>
        <label>Fax Permission</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>CompanyContactFName</description>
        <label>A2Z Contact First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQStateCode__c</fullName>
        <formula>text(BillingStateCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HQ State Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_Address__c</fullName>
        <label>HQ Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ignore_Duplicate_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore Duplicate Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>CompanyContactMName</description>
        <label>A2Z Contact Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance__c</fullName>
        <label>Maintenance</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Codes__c</fullName>
        <label>Merge Codes</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Named_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the account is Name account. This is being used in Territory rules and Opportunity owner change.</description>
        <label>Named Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open2__c</fullName>
        <label>Open2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone1_Ext__c</fullName>
        <label>Phone1 Ext</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone1__c</fullName>
        <label>Phone1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone2_Ext__c</fullName>
        <label>Phone2 Ext</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone2__c</fullName>
        <label>Phone2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Ext__c</fullName>
        <label>Phone Ext</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Result__c</fullName>
        <label>Prev Result</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Account_ID__c</fullName>
        <description>Used with Apex code to merge accounts</description>
        <label>Primary Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Relationship_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <description>A2Z's CompanyContactHonorific</description>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secr__c</fullName>
        <label>Secr</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SkipAddressValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By default, this will skip address validation in Salesforce</description>
        <label>SkipAddressValidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubShowIdfromLeavCovertion__c</fullName>
        <label>SubShowIdfromLeavCovertion</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSS_ID__c</fullName>
        <label>TSS ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>External_Account_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <columns>External_Account_ID__c</columns>
        <columns>Phone1__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Alert_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
INCLUDES(Do_Not_Sell__c, "Collections Alert"),
ISBLANK (TEXT(Collection_Alert_Reason__c))
)&amp;&amp; $Permission.Bypass_Validation_rules_for_Users = False</errorConditionFormula>
        <errorDisplayField>Collection_Alert_Reason__c</errorDisplayField>
        <errorMessage>Collection Alert Reason is required when Collections Alert is chosen</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Postal_Code_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
   AND($User.Email &lt;&gt; 'salesforce@emeraldexpo.com',
         SkipAddressValidation__c = FALSE)
   ,
   OR( 
       ISPICKVAL(BillingCountryCode,'US'), 
       ISPICKVAL(BillingCountryCode,'CA') 
   ),
   (NOT ISBLANK(BillingStreet)),
   (NOT ISBLANK(BillingCity)),
   ISBLANK(BillingPostalCode)  
)&amp;&amp; $Permission.Bypass_Validation_rules_for_Users = False</errorConditionFormula>
        <errorDisplayField>BillingPostalCode</errorDisplayField>
        <errorMessage>Postal Code is required for US or Canadian address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>State_required_for_specific_Countries</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
   AND($User.Email &lt;&gt; 'salesforce@emeraldexpo.com',
         SkipAddressValidation__c = FALSE)
   ,
OR(
ISPICKVAL(BillingCountryCode,'US'),
ISPICKVAL(BillingCountryCode,'CA')
),
(NOT ISBLANK(BillingStreet)),
(NOT ISBLANK(BillingCity)),
ISBLANK(BillingState)
)&amp;&amp; $Permission.Bypass_Validation_rules_for_Users = False</errorConditionFormula>
        <errorDisplayField>BillingState</errorDisplayField>
        <errorMessage>State/Province is required for US or Canadian address.</errorMessage>
    </validationRules>
</CustomObject>